- merged some first changes from the experimental branch to main, - CAUTION! This version doesn't compile. For a working version, use revision 473
git-svn-id: https://jamocha.svn.sourceforge.net/svnroot/jamocha/jamocha@474 2cd91b7d-3b21-0410-a5f4-f42db4f24360